Task_3/app.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: node-example
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: node-example
    spec:
      containers:
      - name: node-example
        image: <image_name>
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: node-example
  labels:
    app: node-example
spec:
  selector:
    app: node-example
  ports:
  - name: node-example
    port: 80
    targetPort: 3000
    protocol: TCP
